# lab_1_llp

./: .attempt.swp  .data.swp  .gitignore  .only.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  attempt  chat.c  cmake_install.cmake  data  ex.c  lab_1_llp.docx  llp  main  main.c  only  some  some.c  test  test.c
.cache/clangd/index/: common.c.D81E2DAEFF72C7E1.idx  common.h.B420FB68AAE1F517.idx  crud_methods.c.D56F7A550B1142B8.idx  crud_methods.h.4ABBC3BB466E7715.idx  data.c.9410018CCD86808A.idx  data.h.74720EDF075F45B2.idx  include.h.4AF7E511356F7D86.idx  io.c.3BE11BC8EE6DFFF1.idx  io.h.9F3A4D6EFB66CE09.idx  main.c.2FA080492BD5C16E.idx  node.c.F0DD02703C98A3E5.idx  node.h.27645BF57E2DF683.idx  page.c.833131B1C4A30F45.idx  page.h.9DED310C062DCA57.idx  page_utils.c.B7B04426999E41B1.idx  page_utils.h.77039C516208A98D.idx  property.c.B54DC13F5C3B61BA.idx  property.h.D95734A766A2C65D.idx  relationship.c.A7E753A524A09A48.idx  relationship.h.D53C02276DCF3271.idx  specific.c.75A004F0332258FF.idx  specific.h.C8AF220C2F37BC43.idx  test_data.c.5D64DC97A5C6B965.idx  test_data.h.5393F7BEE4141449.idx  type.c.365DCE22AD3C6C9F.idx  type.h.313762194FD79BFA.idx
.github/workflows/: cmake-single-platform.yml
include/: include.h  test_data.h
include/data/: common.h  constants.h  crud_methods.h  data.h  entity.h  iterator.h  node.h  page.h  page_utils.h  property.h  relationship.h  specific.h  stack.h  type.h  util_data.h
include/io/: io.h
include/managers/: page_manager.h
include/operations/: common.h  comparator.h  crud_methods.h  specific.h
include/utils/: page_utils.h  test_utils.h
src/: main.c  test.c
src/data/: common.c  comparator.c  constants.c  crud_methods.c  data.c  entity.c  iterator.c  node.c  page.c  property.c  relationship.c  specific.c  stack.c  type.c
src/io/: io.c
src/managers/: file_manager.c  page_manager.c
src/operations/: common.c  comparator.c  crud_methods.c  specific.c
src/utils/: io_utils.c  page_utils.c  stack_utils.c  test_data.c
